--- a/docs/docs/docs.css
+++ b/docs/docs/docs.css
@@ -1,41 +1,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-numbers/prism-line-numbers.min.css");
 
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-    width: 100%;
-}
-
-.tab-button {
-    flex: 1;
-    padding: 15px 20px;
-    background-color: var(--navbar-color);
-    color: var(--background-color);
-    text-align: center;
-    text-decoration: none;
-    font-size: 1.1em;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-    margin: 0 5px;
-}
-
-.tab-button:hover {
-    background-color: var(--hover-color);
-    color: var(--effortless-gray);
-}
-
-/* For the quickstart page */
-.button-container:first-of-type {
-    margin-top: 30px;
-}
-
-/* For the docs homepage */
-.button-container:not(:first-of-type) {
-    margin-top: 10px;
+h2 {
+    margin-top: 70px;
 }
 
 .terminal-command {
@@ -60,16 +27,17 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.command-container pre {
+.command-container pre,
+.prefix {
     margin: 0;
     padding: 0;
-    border-radius: 8px 0px 0px 8px;
-    border: none;
 }
 
-.command-container code {
+.command-container code,
+.prefix {
     display: block;
     padding: 1em;
+    padding-left: 0em;
     overflow-x: auto;
     font-family: "Consolas", "Monaco", "Andale Mono", "Ubuntu Mono", monospace;
     font-size: 0.9em;
@@ -78,10 +46,31 @@
     white-space: pre;
     background-color: color-mix(in srgb, var(--effortless-gray) 80%, black);
     text-shadow: none !important;
+    border: none !important;
+    border-radius: 0px !important;
 }
 
-.command-container code span {
+.command-container code span,
+.prefix {
     background-color: transparent !important;
+}
+
+.command-line {
+    display: flex;
+    align-items: flex-start;
+}
+
+.prefix {
+    margin: none;
+    padding: 1em 1em;
+    padding-right: 0em;
+    user-select: none;
+    color: var(--tertiary-color);
+    overflow-x: visible;
+}
+
+.command-body {
+    flex-grow: 1;
 }
 
 code[class*="language-"] .token.comment,
@@ -99,9 +88,9 @@ pre[class*="language-"] .token.comment {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--background-color);
+    background-color: var(--effortless-gray);
     border-radius: 0px 8px 8px 0px;
-    position: relative; /* Add this line */
+    position: relative;
 }
 
 .copy-button:hover {
