--- a/docs/docs/technical/technical.css
+++ b/docs/docs/technical/technical.css
@@ -18,8 +18,6 @@
     font-size: 1.4rem;
     margin-top: 1.5rem;
     margin-bottom: 0.5rem;
-    white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
     width: fit-content;
 }
@@ -70,8 +68,8 @@
     box-sizing: border-box;
 }
 
-.property > *,
-.method > * {
+.property > *:not(.example-usage),
+.method > *:not(.example-usage) {
     flex: 1 0 auto;
     min-width: 0;
 }
@@ -134,6 +132,10 @@
     .example-usage {
         font-size: 0.8rem;
     }
+}
+
+.command-container {
+    max-width: 80vw !important;
 }
 
 .property:hover,
