--- a/docs/styles.css
+++ b/docs/styles.css
@@ -89,7 +89,7 @@ h3 {
 
 .feature {
     font-family: var(--feature-font); /* Use the feature font */
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -112,12 +112,13 @@ a:hover {
     height: auto;
     padding: 0;
     margin: 0;
+    margin-bottom: 2rem;
 }
 
 @media (max-width: 768px) {
     .banner-logo {
-        width: 100vw !important;
-        max-width: 100vw !important;
+        width: 90vw !important;
+        max-width: 90vw !important;
     }
 }
 
